k3sdeploys/plex/jacket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jacket
  namespace: plex
  labels:
    app: jacket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jacket
  template:
    metadata:
      labels:
        app: jacket
    spec:
      containers:
      - name: jacket
        image: linuxserver/jackett:latest
        ports:
          - containerPort: 9117
            protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "256Gi"
            cpu: "0.5"
        volumeMounts:
        - name: jacket-config
          mountPath: /config
        - name: jacket-nfs
          mountPath: /downloads
          subPath: jacket/downloads

      # - name: wireguard-sidecar
      #   image: linuxserver/wireguard:latest
      #   securityContext:
      #     privileged: true
      #     capabilities:
      #       add:
      #         - NET_ADMIN
      #   resources:
      #     requests:
      #       memory: "256Mi"
      #       cpu: "250m"
      #     limits:
      #       memory: "512Gi"
      #       cpu: "500m"
      #   volumeMounts:
      #   - name: wg-config
      #     mountPath: /config/wg_confs

      volumes:
      # - name: wg-config
      #   secret:
      #     secretName: wireguard-conf
      - name: jacket-config
        persistentVolumeClaim:
          claimName: jacket-config
      - name: jacket-nfs
        persistentVolumeClaim:
          claimName: transmission-nfs-pvc
