k3sdeploys/plex/jacket/deploymentopenvpn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jacket
  namespace: plex
  labels:
    app: jacket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jacket
  template:
    metadata:
      labels:
        app: jacket
    spec:
      containers:
      - name: jacket
        image: gjeanmart/jackettvpn:latest
        ports:
          - containerPort: 9117
            protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "256Gi"
            cpu: "0.5"
        volumeMounts:
        - name: jacket-config
          mountPath: /config
        - name: jacket-nfs
          mountPath: /downloads
          subPath: jacket/downloads
        securityContext:
          privileged: true
          capabilities:
            add:
              - NET_ADMIN
      # - name: busybox
      #   image: busybox
      #   command:
      #     - sleep
      #     - "3600"
      #   resources:
      #   volumeMounts:
      #   - name: jacket-config
      #     mountPath: /config

      volumes:
      - name: jacket-config
        persistentVolumeClaim:
          claimName: jacket-config
      - name: jacket-nfs
        persistentVolumeClaim:
          claimName: transmission-nfs-pvc
