k3sdeploys/plex/jacket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jacket-service
  namespace: plex  
  labels:
    app: jacket
spec:
  selector:
    app: jacket
  ports:
    - name: webui
      port: 9117
      targetPort: 9117
      protocol: TCP
